cleanup transcription, use markdwn

--- a/Trunk-Transcribe/templates/audio.html.tmpl
+++ b/Trunk-Transcribe/templates/audio.html.tmpl
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<audio crossorigin="anonymous" controls autoplay>
+<audio controls autoplay>
   <source src="{{ .Link }}" type="audio/wav">  
 Your browser does not support the audio element.
 </audio>
